--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Firt Web Site</title>
 </head>
 <body>
-    <h1>Kodluyoruz-Front-End</h1>
-    <!-- Aciklama -->
+    <h1>Arda Batuhan AYDIN</h1>
+    <!-- İsim soy ad -->
+    <h2>Hakkımda</h2>
+    <p>Merhaba, ben Arda. İstanbul'da yaşıyorum. Bilgisayar Müh. öğrencisiyim.</p>
+    <h2>Bilgi</h2>
+    <p>Kodluyoruz HTML eğitimi kapsamında ödev 1 olarak yaptığım site.</p>
     <!--
-        Baba meraba
-        merrrrraba
+        Bilgilendirme
     -->
-    <h2>HTML</h2>
-    <h3>Başlik - Paragraf</h3>
     
 </body>
 </html>
